Trab 4 - Code Generation/src/syntax.output
Terminals unused in grammar

    DELIM_BRACKET_L
    DELIM_BRACKET_R
    DELIM_SQUOTE
    DELIM_DQUOTE
    SINGLE_COMMENT
    MULTI_COMMENT
    FORMAT_BLANKSPACE
    FORMAT_NEWLINE
    FORMAT_TAB


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration
    4                | declarationList statement
    5                | statement

    6 declaration: varDeclaration
    7            | funcDeclaration

    8 varDeclaration: TYPE ID DELIM_SEMICOLLON
    9               | TYPE LIST_TYPE ID DELIM_SEMICOLLON

   10 $@1: %empty

   11 $@2: %empty

   12 funcDeclaration: TYPE ID $@1 DELIM_PARENT_L parameters DELIM_PARENT_R $@2 bodyStatement

   13 $@3: %empty

   14 $@4: %empty

   15 funcDeclaration: TYPE LIST_TYPE ID $@3 DELIM_PARENT_L parameters DELIM_PARENT_R $@4 bodyStatement

   16 parameters: parameterList
   17           | %empty

   18 parameterList: parameterList DELIM_COMMA parameterSimple
   19              | parameterSimple

   20 parameterSimple: TYPE ID
   21                | TYPE LIST_TYPE ID

   22 statement: bodyStatement
   23          | ifStatement
   24          | loopStatement
   25          | returnStatement
   26          | writeOp DELIM_SEMICOLLON
   27          | readOp DELIM_SEMICOLLON
   28          | expressionStatement
   29          | error

   30 bodyStatement: DELIM_CUR_BRACKET_L statementList DELIM_CUR_BRACKET_R

   31 localDeclaration: localDeclaration varDeclaration
   32                 | %empty

   33 statementList: statementList localDeclaration statement
   34              | %empty

   35 ifStatement: IF_KEY DELIM_PARENT_L simpleExpression DELIM_PARENT_R statement
   36            | IF_KEY DELIM_PARENT_L simpleExpression DELIM_PARENT_R statement ELSE_KEY statement

   37 loopStatement: FOR_KEY DELIM_PARENT_L expression DELIM_SEMICOLLON simpleExpression DELIM_SEMICOLLON expression DELIM_PARENT_R statement

   38 returnStatement: RETURN_KEY expression DELIM_SEMICOLLON

   39 expression: ID ASSIGN_OP expression
   40           | simpleExpression

   41 simpleExpression: logicBinExpression

   42 logicBinExpression: logicBinExpression LOGIC_OP logicUnExpression
   43                   | logicUnExpression

   44 logicUnExpression: EXCLA_OP logicUnExpression
   45                  | binExpression

   46 binExpression: binExpression BINARY_OP sumExpression
   47              | sumExpression

   48 sumExpression: sumExpression sumOP mulExpression
   49              | mulExpression

   50 mulExpression: mulExpression mulOP listExpression
   51              | listExpression

   52 sumOP: PLUS_OP
   53      | MINUS_OP

   54 mulOP: MUL_OP
   55      | DIV_OP

   56 factor: ID
   57       | constant
   58       | DELIM_PARENT_L simpleExpression DELIM_PARENT_R
   59       | functionCall

   60 constant: INT
   61         | MINUS_OP INT
   62         | FLOAT
   63         | MINUS_OP FLOAT
   64         | NULL_CONST

   65 functionCall: ID DELIM_PARENT_L parametersPass DELIM_PARENT_R

   66 parametersPass: parametersPass DELIM_COMMA simpleExpression
   67               | simpleExpression
   68               | %empty

   69 writeOp: write
   70        | writeln

   71 write: OUTPUT_KEY DELIM_PARENT_L STRING DELIM_PARENT_R
   72      | OUTPUT_KEY DELIM_PARENT_L simpleExpression DELIM_PARENT_R

   73 writeln: OUTPUTLN_KEY DELIM_PARENT_L STRING DELIM_PARENT_R
   74        | OUTPUTLN_KEY DELIM_PARENT_L simpleExpression DELIM_PARENT_R

   75 readOp: INPUT_KEY DELIM_PARENT_L ID DELIM_PARENT_R

   76 expressionStatement: expression DELIM_SEMICOLLON

   77 listExpression: listAssign

   78 listAssign: listMap ASSIGN_LISTOP listAssign
   79           | listMap

   80 listHeader: HEADER_LISTOP listHeader
   81           | listTailDestructor

   82 listTailDestructor: TAILDES_LISTOP listTailDestructor
   83                   | factor

   84 listMap: listMap MAP_LISTOP listFilter
   85        | listFilter

   86 listFilter: listFilter FILTER_LISTOP listHeader
   87           | listHeader


Terminals, with rules where they appear

    $end (0) 0
    error (256) 29
    INT <t_token> (258) 60 61
    FLOAT <t_token> (259) 62 63
    ID <t_token> (260) 8 9 12 15 20 21 39 56 65 75
    TYPE <t_token> (261) 8 9 12 15 20 21
    LIST_TYPE <t_token> (262) 9 15 21
    STRING <t_token> (263) 71 73
    NULL_CONST <t_token> (264) 64
    PLUS_OP <t_token> (265) 52
    MINUS_OP <t_token> (266) 53 61 63
    DIV_OP <t_token> (267) 55
    MUL_OP <t_token> (268) 54
    LOGIC_OP <t_token> (269) 42
    BINARY_OP <t_token> (270) 46
    ASSIGN_OP <t_token> (271) 39
    EXCLA_OP <t_token> (272) 44
    IF_KEY <t_token> (273) 35 36
    ELSE_KEY <t_token> (274) 36
    FOR_KEY <t_token> (275) 37
    RETURN_KEY <t_token> (276) 38
    THEN_PREC (277)
    INPUT_KEY <t_token> (278) 75
    OUTPUT_KEY <t_token> (279) 71 72
    OUTPUTLN_KEY <t_token> (280) 73 74
    ASSIGN_LISTOP <t_token> (281) 78
    HEADER_LISTOP <t_token> (282) 80
    TAILDES_LISTOP <t_token> (283) 82
    MAP_LISTOP <t_token> (284) 84
    FILTER_LISTOP <t_token> (285) 86
    DELIM_PARENT_L <t_token> (286) 12 15 35 36 37 58 65 71 72 73 74 75
    DELIM_PARENT_R <t_token> (287) 12 15 35 36 37 58 65 71 72 73 74 75
    DELIM_BRACKET_L <t_token> (288)
    DELIM_BRACKET_R <t_token> (289)
    DELIM_CUR_BRACKET_L <t_token> (290) 30
    DELIM_CUR_BRACKET_R <t_token> (291) 30
    DELIM_COMMA <t_token> (292) 18 66
    DELIM_SEMICOLLON <t_token> (293) 8 9 26 27 37 38 76
    DELIM_SQUOTE <t_token> (294)
    DELIM_DQUOTE <t_token> (295)
    SINGLE_COMMENT <t_token> (296)
    MULTI_COMMENT <t_token> (297)
    FORMAT_BLANKSPACE <t_token> (298)
    FORMAT_NEWLINE <t_token> (299)
    FORMAT_TAB <t_token> (300)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <t_node> (47)
        on left: 1
        on right: 0
    declarationList <t_node> (48)
        on left: 2 3 4 5
        on right: 1 2 4
    declaration <t_node> (49)
        on left: 6 7
        on right: 2 3
    varDeclaration <t_node> (50)
        on left: 8 9
        on right: 6 31
    funcDeclaration <t_node> (51)
        on left: 12 15
        on right: 7
    $@1 (52)
        on left: 10
        on right: 12
    $@2 (53)
        on left: 11
        on right: 12
    $@3 (54)
        on left: 13
        on right: 15
    $@4 (55)
        on left: 14
        on right: 15
    parameters <t_node> (56)
        on left: 16 17
        on right: 12 15
    parameterList <t_node> (57)
        on left: 18 19
        on right: 16 18
    parameterSimple <t_node> (58)
        on left: 20 21
        on right: 18 19
    statement <t_node> (59)
        on left: 22 23 24 25 26 27 28 29
        on right: 4 5 33 35 36 37
    bodyStatement <t_node> (60)
        on left: 30
        on right: 12 15 22
    localDeclaration <t_node> (61)
        on left: 31 32
        on right: 31 33
    statementList <t_node> (62)
        on left: 33 34
        on right: 30 33
    ifStatement <t_node> (63)
        on left: 35 36
        on right: 23
    loopStatement <t_node> (64)
        on left: 37
        on right: 24
    returnStatement <t_node> (65)
        on left: 38
        on right: 25
    expression <t_node> (66)
        on left: 39 40
        on right: 37 38 39 76
    simpleExpression <t_node> (67)
        on left: 41
        on right: 35 36 37 40 58 66 67 72 74
    logicBinExpression <t_node> (68)
        on left: 42 43
        on right: 41 42
    logicUnExpression <t_node> (69)
        on left: 44 45
        on right: 42 43 44
    binExpression <t_node> (70)
        on left: 46 47
        on right: 45 46
    sumExpression <t_node> (71)
        on left: 48 49
        on right: 46 47 48
    mulExpression <t_node> (72)
        on left: 50 51
        on right: 48 49 50
    sumOP <t_node> (73)
        on left: 52 53
        on right: 48
    mulOP <t_node> (74)
        on left: 54 55
        on right: 50
    factor <t_node> (75)
        on left: 56 57 58 59
        on right: 83
    constant <t_node> (76)
        on left: 60 61 62 63 64
        on right: 57
    functionCall <t_node> (77)
        on left: 65
        on right: 59
    parametersPass <t_node> (78)
        on left: 66 67 68
        on right: 65 66
    writeOp <t_node> (79)
        on left: 69 70
        on right: 26
    write <t_node> (80)
        on left: 71 72
        on right: 69
    writeln <t_node> (81)
        on left: 73 74
        on right: 70
    readOp <t_node> (82)
        on left: 75
        on right: 27
    expressionStatement <t_node> (83)
        on left: 76
        on right: 28
    listExpression <t_node> (84)
        on left: 77
        on right: 50 51
    listAssign <t_node> (85)
        on left: 78 79
        on right: 77 78
    listHeader <t_node> (86)
        on left: 80 81
        on right: 80 86 87
    listTailDestructor <t_node> (87)
        on left: 82 83
        on right: 81 82
    listMap <t_node> (88)
        on left: 84 85
        on right: 78 79 84
    listFilter <t_node> (89)
        on left: 86 87
        on right: 84 85 86


State 0

    0 $accept: • program $end

    error                shift, and go to state 1
    INT                  shift, and go to state 2
    FLOAT                shift, and go to state 3
    ID                   shift, and go to state 4
    TYPE                 shift, and go to state 5
    NULL_CONST           shift, and go to state 6
    MINUS_OP             shift, and go to state 7
    EXCLA_OP             shift, and go to state 8
    IF_KEY               shift, and go to state 9
    FOR_KEY              shift, and go to state 10
    RETURN_KEY           shift, and go to state 11
    INPUT_KEY            shift, and go to state 12
    OUTPUT_KEY           shift, and go to state 13
    OUTPUTLN_KEY         shift, and go to state 14
    HEADER_LISTOP        shift, and go to state 15
    TAILDES_LISTOP       shift, and go to state 16
    DELIM_PARENT_L       shift, and go to state 17
    DELIM_CUR_BRACKET_L  shift, and go to state 18

    program              go to state 19
    declarationList      go to state 20
    declaration          go to state 21
    varDeclaration       go to state 22
    funcDeclaration      go to state 23
    statement            go to state 24
    bodyStatement        go to state 25
    ifStatement          go to state 26
    loopStatement        go to state 27
    returnStatement      go to state 28
    expression           go to state 29
    simpleExpression     go to state 30
    logicBinExpression   go to state 31
    logicUnExpression    go to state 32
    binExpression        go to state 33
    sumExpression        go to state 34
    mulExpression        go to state 35
    factor               go to state 36
    constant             go to state 37
    functionCall         go to state 38
    writeOp              go to state 39
    write                go to state 40
    writeln              go to state 41
    readOp               go to state 42
    expressionStatement  go to state 43
    listExpression       go to state 44
    listAssign           go to state 45
    listHeader           go to state 46
    listTailDestructor   go to state 47
    listMap              go to state 48
    listFilter           go to state 49


State 1

   29 statement: error •

    $end                 reduce using rule 29 (statement)
    error                reduce using rule 29 (statement)
    INT                  reduce using rule 29 (statement)
    FLOAT                reduce using rule 29 (statement)
    ID                   reduce using rule 29 (statement)
    TYPE                 reduce using rule 29 (statement)
    NULL_CONST           reduce using rule 29 (statement)
    MINUS_OP             reduce using rule 29 (statement)
    EXCLA_OP             reduce using rule 29 (statement)
    IF_KEY               reduce using rule 29 (statement)
    FOR_KEY              reduce using rule 29 (statement)
    RETURN_KEY           reduce using rule 29 (statement)
    INPUT_KEY            reduce using rule 29 (statement)
    OUTPUT_KEY           reduce using rule 29 (statement)
    OUTPUTLN_KEY         reduce using rule 29 (statement)
    HEADER_LISTOP        reduce using rule 29 (statement)
    TAILDES_LISTOP       reduce using rule 29 (statement)
    DELIM_PARENT_L       reduce using rule 29 (statement)
    DELIM_CUR_BRACKET_L  reduce using rule 29 (statement)


State 2

   60 constant: INT •

    PLUS_OP           reduce using rule 60 (constant)
    MINUS_OP          reduce using rule 60 (constant)
    DIV_OP            reduce using rule 60 (constant)
    MUL_OP            reduce using rule 60 (constant)
    LOGIC_OP          reduce using rule 60 (constant)
    BINARY_OP         reduce using rule 60 (constant)
    ASSIGN_LISTOP     reduce using rule 60 (constant)
    MAP_LISTOP        reduce using rule 60 (constant)
    FILTER_LISTOP     reduce using rule 60 (constant)
    DELIM_SEMICOLLON  reduce using rule 60 (constant)


State 3

   62 constant: FLOAT •

    PLUS_OP           reduce using rule 62 (constant)
    MINUS_OP          reduce using rule 62 (constant)
    DIV_OP            reduce using rule 62 (constant)
    MUL_OP            reduce using rule 62 (constant)
    LOGIC_OP          reduce using rule 62 (constant)
    BINARY_OP         reduce using rule 62 (constant)
    ASSIGN_LISTOP     reduce using rule 62 (constant)
    MAP_LISTOP        reduce using rule 62 (constant)
    FILTER_LISTOP     reduce using rule 62 (constant)
    DELIM_SEMICOLLON  reduce using rule 62 (constant)


State 4

   39 expression: ID • ASSIGN_OP expression
   56 factor: ID •
   65 functionCall: ID • DELIM_PARENT_L parametersPass DELIM_PARENT_R

    ASSIGN_OP       shift, and go to state 50
    DELIM_PARENT_L  shift, and go to state 51

    PLUS_OP           reduce using rule 56 (factor)
    MINUS_OP          reduce using rule 56 (factor)
    DIV_OP            reduce using rule 56 (factor)
    MUL_OP            reduce using rule 56 (factor)
    LOGIC_OP          reduce using rule 56 (factor)
    BINARY_OP         reduce using rule 56 (factor)
    ASSIGN_LISTOP     reduce using rule 56 (factor)
    MAP_LISTOP        reduce using rule 56 (factor)
    FILTER_LISTOP     reduce using rule 56 (factor)
    DELIM_SEMICOLLON  reduce using rule 56 (factor)


State 5

    8 varDeclaration: TYPE • ID DELIM_SEMICOLLON
    9               | TYPE • LIST_TYPE ID DELIM_SEMICOLLON
   12 funcDeclaration: TYPE • ID $@1 DELIM_PARENT_L parameters DELIM_PARENT_R $@2 bodyStatement
   15                | TYPE • LIST_TYPE ID $@3 DELIM_PARENT_L parameters DELIM_PARENT_R $@4 bodyStatement

    ID         shift, and go to state 52
    LIST_TYPE  shift, and go to state 53


State 6

   64 constant: NULL_CONST •

    PLUS_OP           reduce using rule 64 (constant)
    MINUS_OP          reduce using rule 64 (constant)
    DIV_OP            reduce using rule 64 (constant)
    MUL_OP            reduce using rule 64 (constant)
    LOGIC_OP          reduce using rule 64 (constant)
    BINARY_OP         reduce using rule 64 (constant)
    ASSIGN_LISTOP     reduce using rule 64 (constant)
    MAP_LISTOP        reduce using rule 64 (constant)
    FILTER_LISTOP     reduce using rule 64 (constant)
    DELIM_SEMICOLLON  reduce using rule 64 (constant)


State 7

   61 constant: MINUS_OP • INT
   63         | MINUS_OP • FLOAT

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55


State 8

   44 logicUnExpression: EXCLA_OP • logicUnExpression

    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    ID              shift, and go to state 56
    NULL_CONST      shift, and go to state 6
    MINUS_OP        shift, and go to state 7
    EXCLA_OP        shift, and go to state 8
    HEADER_LISTOP   shift, and go to state 15
    TAILDES_LISTOP  shift, and go to state 16
    DELIM_PARENT_L  shift, and go to state 17

    logicUnExpression   go to state 57
    binExpression       go to state 33
    sumExpression       go to state 34
    mulExpression       go to state 35
    factor              go to state 36
    constant            go to state 37
    functionCall        go to state 38
    listExpression      go to state 44
    listAssign          go to state 45
    listHeader          go to state 46
    listTailDestructor  go to state 47
    listMap             go to state 48
    listFilter          go to state 49


State 9

   35 ifStatement: IF_KEY • DELIM_PARENT_L simpleExpression DELIM_PARENT_R statement
   36            | IF_KEY • DELIM_PARENT_L simpleExpression DELIM_PARENT_R statement ELSE_KEY statement

    DELIM_PARENT_L  shift, and go to state 58


State 10

   37 loopStatement: FOR_KEY • DELIM_PARENT_L expression DELIM_SEMICOLLON simpleExpression DELIM_SEMICOLLON expression DELIM_PARENT_R statement

    DELIM_PARENT_L  shift, and go to state 59


State 11

   38 returnStatement: RETURN_KEY • expression DELIM_SEMICOLLON

    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    ID              shift, and go to state 4
    NULL_CONST      shift, and go to state 6
    MINUS_OP        shift, and go to state 7
    EXCLA_OP        shift, and go to state 8
    HEADER_LISTOP   shift, and go to state 15
    TAILDES_LISTOP  shift, and go to state 16
    DELIM_PARENT_L  shift, and go to state 17

    expression          go to state 60
    simpleExpression    go to state 30
    logicBinExpression  go to state 31
    logicUnExpression   go to state 32
    binExpression       go to state 33
    sumExpression       go to state 34
    mulExpression       go to state 35
    factor              go to state 36
    constant            go to state 37
    functionCall        go to state 38
    listExpression      go to state 44
    listAssign          go to state 45
    listHeader          go to state 46
    listTailDestructor  go to state 47
    listMap             go to state 48
    listFilter          go to state 49


State 12

   75 readOp: INPUT_KEY • DELIM_PARENT_L ID DELIM_PARENT_R

    DELIM_PARENT_L  shift, and go to state 61


State 13

   71 write: OUTPUT_KEY • DELIM_PARENT_L STRING DELIM_PARENT_R
   72      | OUTPUT_KEY • DELIM_PARENT_L simpleExpression DELIM_PARENT_R

    DELIM_PARENT_L  shift, and go to state 62


State 14

   73 writeln: OUTPUTLN_KEY • DELIM_PARENT_L STRING DELIM_PARENT_R
   74        | OUTPUTLN_KEY • DELIM_PARENT_L simpleExpression DELIM_PARENT_R

    DELIM_PARENT_L  shift, and go to state 63


State 15

   80 listHeader: HEADER_LISTOP • listHeader

    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    ID              shift, and go to state 56
    NULL_CONST      shift, and go to state 6
    MINUS_OP        shift, and go to state 7
    HEADER_LISTOP   shift, and go to state 15
    TAILDES_LISTOP  shift, and go to state 16
    DELIM_PARENT_L  shift, and go to state 17

    factor              go to state 36
    constant            go to state 37
    functionCall        go to state 38
    listHeader          go to state 64
    listTailDestructor  go to state 47


State 16

   82 listTailDestructor: TAILDES_LISTOP • listTailDestructor

    INT             shift, and go to state 2
    FLOAT           shift, and go to state 3
    ID              shift, and go to state 56
    NULL_CONST      shift, and go to state 6
    MINUS_OP        shift, and go to state 7
    TAILDES_LISTOP  shift, and go to state 16
    DELIM_PARENT_L  shift, and go to state 17

    factor              go to state 36
    constant            go to state 37
    functionCall        go to state 38
    listTailDestructor  go to state 65


State 17

   58 factor: DELIM_PARENT_L • simpleExpression DELIM_PARENT_R

    INT             shift, and go to state 153
    FLOAT           shift, and go to state 154
    ID              shift, and go to state 155
    NULL_CONST      shift, and go to state 156
    MINUS_OP        shift, and go to state 157
    EXCLA_OP        shift, and go to state 158
    HEADER_LISTOP   shift, and go to state 159
    TAILDES_LISTOP  shift, and go to state 160
    DELIM_PARENT_L  shift, and go to state 161

    simpleExpression    go to state 66
    logicBinExpression  go to state 162
    logicUnExpression   go to state 163
    binExpression       go to state 164
    sumExpression       go to state 165
    mulExpression       go to state 166
    factor              go to state 167
    constant            go to state 168
    functionCall        go to state 169
    listExpression      go to state 170
    listAssign          go to state 171
    listHeader          go to state 172
    listTailDestructor  go to state 173
    listMap             go to state 174
    listFilter          go to state 175


State 18

   30 bodyStatement: DELIM_CUR_BRACKET_L • statementList DELIM_CUR_BRACKET_R

    error                reduce using rule 34 (statementList)
    INT                  reduce using rule 34 (statementList)
    FLOAT                reduce using rule 34 (statementList)
    ID                   reduce using rule 34 (statementList)
    TYPE                 reduce using rule 34 (statementList)
    NULL_CONST           reduce using rule 34 (statementList)
    MINUS_OP             reduce using rule 34 (statementList)
    EXCLA_OP             reduce using rule 34 (statementList)
    IF_KEY               reduce using rule 34 (statementList)
    FOR_KEY              reduce using rule 34 (statementList)
    RETURN_KEY           reduce using rule 34 (statementList)
    INPUT_KEY            reduce using rule 34 (statementList)
    OUTPUT_KEY           reduce using rule 34 (statementList)
    OUTPUTLN_KEY         reduce using rule 34 (statementList)
    HEADER_LISTOP        reduce using rule 34 (statementList)
    TAILDES_LISTOP       reduce using rule 34 (statementList)
    DELIM_PARENT_L       reduce using rule 34 (statementList)
    DELIM_CUR_BRACKET_L  reduce using rule 34 (statementList)
    DELIM_CUR_BRACKET_R  reduce using rule 34 (statementList)

    statementList  go to state 67


State 19

    0 $accept: program • $end

    $end  shift, and go to state 68


State 20

    1 program: declarationList •
    2 declarationList: declarationList • declaration
    4                | declarationList • statement

    error                shift, and go to state 1
    INT                  shift, and go to state 2
    FLOAT                shift, and go to state 3
    ID                   shift, and go to state 4
    TYPE                 shift, and go to state 5
    NULL_CONST           shift, and go to state 6
    MINUS_OP             shift, and go to state 7
    EXCLA_OP             shift, and go to state 8
    IF_KEY               shift, and go to state 9
    FOR_KEY              shift, and go to state 10
    RETURN_KEY           shift, and go to state 11
    INPUT_KEY            shift, and go to state 12
    OUTPUT_KEY           shift, and go to state 13
    OUTPUTLN_KEY         shift, and go to state 14
    HEADER_LISTOP        shift, and go to state 15
    TAILDES_LISTOP       shift, and go to state 16
    DELIM_PARENT_L       shift, and go to state 17
    DELIM_CUR_BRACKET_L  shift, and go to state 18

    $end  reduce using rule 1 (program)
